YML-Template/15-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace            # Replace with desired namespace name
