YML-Template/04-StatefulSet-Template.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-name       # Replace with StatefulSet name
spec:
  selector:
    matchLabels:
      app: myapp               # Replace with label selector
  serviceName: my-service      # Replace with the headless service name
  replicas: 2                  # Number of pods to run
  template:
    metadata:
      labels:
        app: myapp             # Must match selector above
    spec:
      containers:
        - name: container-name # Replace with container name
          image: image-name    # Replace with image
          ports:
            - containerPort: 80
