YML-Template/liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-probe-demo
spec:
  containers:
    - name: app-container
      image: # INSERT YOUR IMAGE
      ports:
        - containerPort: # INSERT PORT
      livenessProbe:
        httpGet:
          path: # INSERT PATH
          port: # INSERT PORT
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 3
        successThreshold: 1
