YML-Template/pod-with-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-demo
spec:
  containers:
    - name: main-app
      image: # INSERT MAIN CONTAINER IMAGE
      ports:
        - containerPort: # INSERT PORT
