YML-Template/pod-with-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-affinity-demo
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: # INSERT NODE LABEL KEY
                operator: In
                values:
                  - # INSERT VALUE
  containers:
    - name: app-container
      image: # INSERT IMAGE
      ports:
        - containerPort: # INSERT PORT
