YML-Template/pod-with-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-selector-demo
spec:
  nodeSelector:
    # INSERT YOUR NODE LABEL KEY: VALUE
    # e.g., disktype: ssd
  containers:
    - name: app-container
      image: # INSERT YOUR IMAGE
      ports:
        - containerPort: # INSERT PORT
