YML-Template/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name            # Replace with Ingress name
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Optional, for NGINX
spec:
  rules:
    - host: example.com         # Replace with your domain
      http:
        paths:
          - path: /             # Replace with path to route
            pathType: Prefix
            backend:
              service:
                name: service-name   # Replace with your Service name
                port:
                  number: 80
