YML-Template/21-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific           # Replace with your NetworkPolicy name
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db                   # Replace with label selector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend     # Allow only frontend pods
